# Sass-Dj-Project

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
saasproject/: Dockerfile  pyproject.toml
saasproject/saasproject/: asgi.py  settings.py  urls.py  wsgi.py
